Partial display of encounter notes.